--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+# This file is used to ignore files which are generated
+# ----------------------------------------------------------------------------
+*.code-workspace
+.vscode/
+
 # Logs
 logs
 *.log
